tests/snapshots/scenarios_test__directory_changes.snap
---
source: tests/scenarios_test.rs
description: "Ntp server not provided\nStarting filesystem writer\nListening on local_addr=0.0.0.0:33324 protocol=basic\nStarting writer protocol=basic\nStarting clipboard to protocol forwarder protocol_types=[Basic] groups=[\"default\"]\nCreate filesystem reader {\"/tmp/_test_directory_changes\": {\"default\"}}\nWatching for filesystem changes path=/tmp/_test_directory_changes\nStarting filesystem reader\nPath modified /tmp/_test_directory_changes/_random_file\nMessage sent data_size=33 network_size=101 message_type=files\n"
info:
  program: clipboard-sync
  args:
    - "--key"
    - "12345678912345678912345678912345"
    - "--clipboard"
    - /tmp/_test_directory_changes
    - "--ignore-initial-clipboard"
    - "--verbosity"
    - debug=simple
    - "--bind-address"
    - "0.0.0.0:33324"
snapshot_kind: text
---
success: false
exit_code: -1
----- stdout -----

----- stderr -----
Create filesystem reader {"/tmp/_test_directory_changes": {"default"}}
Listening on local_addr=0.0.0.0:33324 protocol=basic
Message sent data_size=33 network_size=101 message_type=files
Ntp server not provided
Path modified /tmp/_test_directory_changes/_random_file
Starting clipboard to protocol forwarder protocol_types=[Basic] groups=["default"]
Starting filesystem reader
Starting filesystem writer
Starting writer protocol=basic
Watching for filesystem changes path=/tmp/_test_directory_changes
