tests/snapshots/scenarios_test__test_send_receive_once_client_tcp_102400.snap
---
source: tests/scenarios_test.rs
description: "Ntp server not provided\nStarting writer protocol=tcp\nWaiting to send clipboard once\nStarting clipboard to protocol forwarder protocol_types=[Tcp] groups=[\"default\"]\nCreate filesystem reader {\"/dev/stdin\": {\"default\"}}\nSend clipboard on startup path=/dev/stdin\nWatching for filesystem changes path=/dev/stdin\nStarting filesystem reader\nConnect local_addr=127.0.0.1:12904 remote_addr=127.0.0.1:12903 server_name=localhost\nTcp send stream stream_size=102460 remote_addr=127.0.0.1:12903\nMessage sent data_size=102400 network_size=102468 message_type=file\nSent bytes 102400\nFile reader cancelled\nNo more messages for writer\nFinished file reader processed messages 1\nFinished clipboard to protocol forwarder processed messages 1\nFinished tcp writer processed messages 1\n"
info:
  program: clipboard-sync
  args:
    - "--verbosity"
    - debug=simple
    - "--key"
    - "12345678912345678912345678912345"
    - "--send-using-address"
    - "127.0.0.1:12904,[::1]:12904"
    - "--send-once"
    - "--clipboard"
    - /dev/stdin
    - "--allowed-host"
    - "127.0.0.1:12903=localhost"
    - "--protocol"
    - tcp
    - "--remote-certificates"
    - tests/certs/cert-verify/for-client
    - "--private-key"
    - tests/certs/testclient.key
    - "--certificate-chain"
    - tests/certs/testclient.crt
snapshot_kind: text
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
Connect local_addr=127.0.0.1:12904 remote_addr=127.0.0.1:12903 server_name=localhost
Create filesystem reader {"/dev/stdin": {"default"}}
File reader cancelled
Finished clipboard to protocol forwarder processed messages 1
Finished file reader processed messages 1
Finished tcp writer processed messages 1
Message sent data_size=102400 network_size=102468 message_type=file
No more messages for writer
Ntp server not provided
Send clipboard on startup path=/dev/stdin
Sent bytes 102400
Starting clipboard to protocol forwarder protocol_types=[Tcp] groups=["default"]
Starting filesystem reader
Starting writer protocol=tcp
Tcp send stream stream_size=102460 remote_addr=127.0.0.1:12903
Waiting to send clipboard once
Watching for filesystem changes path=/dev/stdin
